--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,28 @@
 name: flutter_web_optimizer
-description: A sample command-line application.
+description: A command-line application provide an load optimization solution for flutter web
 version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
   sdk: '>=2.17.6 <3.0.0'
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  # https://pub.flutter-io.cn/packages/path
+  path: ^1.8.2
+  # https://pub.flutter-io.cn/packages/args
+  args: ^2.3.1
+  # https://pub.flutter-io.cn/packages/completion
+  completion: ^1.0.0
+  # https://pub.flutter-io.cn/packages/html
+  html: ^0.15.1
+  # https://pub.flutter-io.cn/packages/crypto
+  crypto: ^3.0.2
+  # https://pub.flutter-io.cn/packages/yaml
+  yaml: ^3.1.1
 
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.16.0
+
+executables:
+  flutter_web_optimizer: flutter_web_optimizer
