--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_web_optimizer
 description: A command-line application provide an load optimization solution for flutter web
 version: 1.0.0
-# homepage: https://www.example.com
+homepage: https://github.com/TryImpossible/flutter_web_optimizer
 
 environment:
   sdk: '>=2.17.6 <3.0.0'
@@ -11,14 +11,14 @@ dependencies:
   path: ^1.8.2
   # https://pub.flutter-io.cn/packages/args
   args: ^2.3.1
-  # https://pub.flutter-io.cn/packages/completion
-  completion: ^1.0.0
+#  # https://pub.flutter-io.cn/packages/completion
+#  completion: ^1.0.0
   # https://pub.flutter-io.cn/packages/html
   html: ^0.15.1
   # https://pub.flutter-io.cn/packages/crypto
   crypto: ^3.0.2
-  # https://pub.flutter-io.cn/packages/yaml
-  yaml: ^3.1.1
+#  # https://pub.flutter-io.cn/packages/yaml
+#  yaml: ^3.1.1
 
 dev_dependencies:
   lints: ^2.0.0
