--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -47,15 +47,17 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
   # https://pub.dev/packages/path
-  path: ^1.8.1
+  path: ^1.8.3
   # https://pub.dev/packages/tencent_cos_plus
   tencent_cos_plus: ^1.2.0
 
   flutter_web_optimizer:
     path: ../../flutter_web_optimizer
+  flutter_web_cos_upload_plugin:
+    path: ../../flutter_web_optimizer/packages/flutter_web_cos_upload_plugin
 
 dependency_overrides:
-  path: ^1.8.1
+  path: ^1.8.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
