--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,12 @@ dependencies:
   crypto: ^3.0.2
 #  # https://pub.flutter-io.cn/packages/yaml
 #  yaml: ^3.1.1
+  # https://pub.flutter-io.cn/packages/package_config
+  package_config: ^2.1.0
+#  # https://pub.flutter-io.cn/packages/standard_message_codec
+#  standard_message_codec: 0.0.1+3
+#  # https://pub.flutter-io.cn/packages/cli_util
+#  cli_util: ^0.3.5
 
 dev_dependencies:
   lints: ^2.0.0
