--- a/.github/workflows/depoly_gh_pages.yml
+++ b/.github/workflows/depoly_gh_pages.yml
@@ -16,8 +16,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - run: cd example
-
       - name: Setup Flutter
         run: |
           git clone https://github.com/flutter/flutter.git --depth 1 -b beta _flutter
@@ -25,11 +23,14 @@ jobs:
 
       - name: Install
         run: |
+          cd example
           flutter config --enable-web
           flutter pub get
 
       - name: Build
-        run: flutter build web --web-renderer html --pwa-strategy none --base-href https://tryimpossible.github.io/flutter_web_optimizer/
+        run: |
+          cd example
+          flutter build web --web-renderer html --pwa-strategy none --base-href https://tryimpossible.github.io/flutter_web_optimizer/
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
