--- a/packages/flutter_web_cos_upload_plugin/pubspec.yaml
+++ b/packages/flutter_web_cos_upload_plugin/pubspec.yaml
@@ -16,7 +16,8 @@ dependencies:
   # https://pub.dev/packages/tencent_cos_plus
   tencent_cos_plus: ^1.2.0
   # https://pub.dev/packages/flutter_web_optimizer
-  flutter_web_optimizer: ^1.1.0
+  flutter_web_optimizer:
+    path: ../../../flutter_web_optimizer
 
 dev_dependencies:
   lints: ^2.0.0
