--- a/.github/workflows/depoly_gh_pages.yml
+++ b/.github/workflows/depoly_gh_pages.yml
@@ -1,19 +1,37 @@
 name: GitHub Pages
 
 on:
+  # Runs on pushes targeting the default branch
   push:
     branches:
       - main
   pull_request:
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow one concurrent deployment
+concurrency:
+#  group: "pages"
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
-  deploy:
+  build:
+    name: Build Job
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    concurrency:
-      group: ${{ github.workflow }}-${{ github.ref }}
+#    permissions:
+#      contents: write
+#    concurrency:
+#      group: ${{ github.workflow }}-${{ github.ref }}
     steps:
+      - name: Checkout Code
       - uses: actions/checkout@v3
 
       - name: Setup Flutter
@@ -21,25 +39,44 @@ jobs:
           git clone https://github.com/flutter/flutter.git --depth 1 -b beta _flutter
           echo "${GITHUB_WORKSPACE}/_flutter/bin" >> ${GITHUB_PATH}
 
-      - name: Install
+      - name: Install Dependencies
         run: |
           cd example
           flutter config --enable-web
           flutter pub get
 
-      - name: Build
+      - name: Build Web
         run: |
           cd example
           flutter build web --web-renderer html --pwa-strategy none
 
-      - name: Replace href attribute of index.html
+      - name: Replace Href Attribute
         run: |
           cd example/build/web
           sed -i '/<base href=\"\/\">/c <base href="https://tryimpossible.github.io/flutter_web_optimizer/">' index.html         
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        if: ${{ github.ref == 'refs/heads/main' }}
+#      - name: Deploy
+#        uses: peaceiris/actions-gh-pages@v3
+#        if: ${{ github.ref == 'refs/heads/main' }}
+#        with:
+#          github_token: ${{ secrets.GITHUB_TOKEN }}
+#          publish_dir: ./example/build/web
+
+  deploy:
+    name: Deployment job
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./example/build/web
+          # Upload entire repository
+          path: './example/build/web'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
