--- a/.github/workflows/depoly_gh_pages.yml
+++ b/.github/workflows/depoly_gh_pages.yml
@@ -70,13 +70,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Setup Pages
-        uses: actions/configure-pages@v2
+#      - name: Setup Pages
+#        uses: actions/configure-pages@v2
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
           path: './example/build/web'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
