--- a/.github/workflows/depoly_gh_pages.yml
+++ b/.github/workflows/depoly_gh_pages.yml
@@ -1,4 +1,4 @@
-name: GitHub Pages
+name: Deploy Flutter Web Site to Pages
 
 on:
   # Runs on pushes targeting the default branch
@@ -53,9 +53,19 @@ jobs:
       - name: Replace Href Attribute
         run: |
           cd example/build/web
-          sed -i '/<base href=\"\/\">/c <base href="https://tryimpossible.github.io/flutter_web_optimizer/">' index.html         
+          sed -i '/<base href=\"\/\">/c <base href="https://tryimpossible.github.io/flutter_web_optimizer/">' index.html
 
-#      - name: Deploy
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          # Upload entire repository
+          path: './example/build/web'
+
+
+  #      - name: Deploy
 #        uses: peaceiris/actions-gh-pages@v3
 #        if: ${{ github.ref == 'refs/heads/main' }}
 #        with:
@@ -70,15 +80,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Setup Pages
-        uses: actions/configure-pages@v2
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          # Upload entire repository
-          path: './example/build/web'
-
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
