测试使用github actions布署flutter web

--- a/.github/workflows/depoly_gh_pages.yml
+++ b/.github/workflows/depoly_gh_pages.yml
@@ -12,7 +12,7 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: write
+  contents: read
   pages: write
   id-token: write
 
@@ -50,10 +50,10 @@ jobs:
           cd example
           flutter build web --web-renderer html --pwa-strategy none
 
-      - name: Replace Href Attribute
-        run: |
-          cd example/build/web
-          sed -i '/<base href=\"\/\">/c <base href="https://tryimpossible.github.io/flutter_web_optimizer/">' index.html
+#      - name: Replace Href Attribute
+#        run: |
+#          cd example/build/web
+#          sed -i '/<base href=\"\/\">/c <base href="https://tryimpossible.github.io/flutter_web_optimizer/">' index.html
 
       - name: Setup Pages
         uses: actions/configure-pages@v2
