--- a/.github/workflows/depoly_gh_pages.yml
+++ b/.github/workflows/depoly_gh_pages.yml
@@ -30,18 +30,31 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Setup Flutter
-        run: |
-          git clone https://github.com/flutter/flutter.git --depth 1 -b beta _flutter
-          echo "${GITHUB_WORKSPACE}/_flutter/bin" >> ${GITHUB_PATH}
+#      - name: Setup Flutter
+#        run: |
+#          git clone https://github.com/flutter/flutter.git --depth 1 -b beta _flutter
+#          echo "${GITHUB_WORKSPACE}/_flutter/bin" >> ${GITHUB_PATH}
 
-      - name: Install Dependencies
+      - name: Setup Flutter
+          run: |
+            git clone https://github.com/flutter/flutter.git --depth 1 -b beta ~/flutter
+            echo "~/flutter/bin" >> ${GITHUB_PATH}
+
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.pub-cache
+          key: ${{ runner.os }}-pub
+          restore-keys: |
+            ${{ runner.os }}-pub
+
+      - name: Install Flutter Dependencies
         run: |
           cd example
           flutter config --enable-web
           flutter pub get
 
-      - name: Build Web
+      - name: Build Flutter Web
         run: |
           cd example
           flutter build web --web-renderer html --pwa-strategy none --base-href /flutter_web_optimizer/
