--- a/.github/workflows/depoly_gh_pages.yml
+++ b/.github/workflows/depoly_gh_pages.yml
@@ -30,16 +30,6 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/flutter
-            ~/.pub-cache
-          key: ${{ runner.os }}-flutter-cache
-          restore-keys: |
-            ${{ runner.os }}-flutter-cache  
-
 #      - name: Setup Flutter
 #        run: |
 #          git clone https://github.com/flutter/flutter.git --depth 1 -b beta _flutter
@@ -49,6 +39,14 @@ jobs:
         run: |
           git clone https://github.com/flutter/flutter.git --depth 1 -b beta ~/flutter
           echo "~/flutter/bin" >> ${GITHUB_PATH}
+
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.pub-cache
+          key: ${{ runner.os }}-flutter-cache
+          restore-keys: |
+            ${{ runner.os }}-flutter-cache
 
       - name: Install Flutter Dependencies
         run: |
