--- a/.github/workflows/depoly_gh_pages.yml
+++ b/.github/workflows/depoly_gh_pages.yml
@@ -58,6 +58,7 @@ jobs:
         run: |
           cd example
           flutter build web --web-renderer html --pwa-strategy none --base-href /flutter_web_optimizer/
+          flutter pub run flutter_web_optimizer optimize --asset-base https://tryimpossible.github.io/flutter-diy/
 
 #      - name: Replace Href Attribute
 #        run: |
@@ -79,8 +80,9 @@ jobs:
         with:
 #          github_token: ${{ secrets.GITHUB_TOKEN }}
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          external_repository: TryImpossible/flutter-diy
           publish_dir: ./example/build/web
+          publish_branch: flutter-web-optimizer-example  # default: gh-pages
+          external_repository: TryImpossible/flutter-diy
           exclude_assets: '.github,index.html'
 
   deploy:
