--- a/.github/workflows/depoly_gh_pages.yml
+++ b/.github/workflows/depoly_gh_pages.yml
@@ -2,10 +2,10 @@ name: Deploy Flutter Web Site to Pages
 
 on:
   # Runs on pushes targeting the default branch
-  push:
-    branches:
-      - main
-  pull_request:
+#  push:
+#    branches:
+#      - main
+#  pull_request:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -19,7 +19,6 @@ permissions:
 # Allow one concurrent deployment
 concurrency:
   group: "pages"
-#  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
