--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  fluttertoast: ^8.1.2
+  video_player: ^2.4.10
+  chewie: ^1.3.6
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
@@ -102,3 +106,4 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
   assets:
     - assets/images/
+    - assets/svg/
