--- a/.github/workflows/publish_pub.dev.yml
+++ b/.github/workflows/publish_pub.dev.yml
@@ -11,17 +11,31 @@ on:
   workflow_dispatch:
 
 jobs:
-  publishing:
-    name: Publishing Job
+  publish_flutter_web_optimizer:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout Code'
+      - name: 'checkout code'
         uses: actions/checkout@main # required!
 
-      - name: 'Publish Pub Package'
+      - name: '>> publish flutter_web_optimizer package to pub.dev <<'
         uses: k-paxian/dart-package-publisher@master
         with:
           accessToken: ${{ secrets.PUB_ACCESS_TOKEN }}
           refreshToken: ${{ secrets.PUB_REFRESH_TOKEN }}
           skipTests: true
           format: true
+
+  publish_flutter_web_cos_upload_plugin:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'checkout code'
+        uses: actions/checkout@main # required!
+
+      - name: '>> publish flutter_web_cos_upload_plugin package to pub.dev <<'
+        uses: k-paxian/dart-package-publisher@master
+        with:
+          accessToken: ${{ secrets.PUB_ACCESS_TOKEN }}
+          refreshToken: ${{ secrets.PUB_REFRESH_TOKEN }}
+          skipTests: true
+          format: true
+          relativePath: packages/flutter_web_cos_upload_plugin
