--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,8 @@ name: flutter_web_optimizer
 description: A optimization tools for flutter web, solved web page loading slow and browser cache problem.
 version: 1.1.9
 homepage: https://github.com/TryImpossible/flutter_web_optimizer
+repository: https://github.com/TryImpossible/flutter_web_optimizer
+issue_tracker: https://github.com/TryImpossible/flutter_web_optimizer/issues
 
 environment:
   sdk: '>=2.17.6 <3.0.0'
