--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,8 @@ dependencies:
   #  yaml: ^3.1.1
   # https://pub.flutter-io.cn/packages/package_config
   package_config: ^2.1.0
-#  # https://pub.flutter-io.cn/packages/standard_message_codec
-#  standard_message_codec: 0.0.1+3
+  # https://pub.flutter-io.cn/packages/standard_message_codec
+  standard_message_codec: ^0.0.1+3
 #  # https://pub.flutter-io.cn/packages/cli_util
 #  cli_util: ^0.3.5
 
