--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.6 <4.0.0"
+  sdk: '>=3.2.6 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,15 +30,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  fluttertoast: ^8.1.2
-  video_player: ^2.4.10
-  chewie: ^1.3.6
-  flutter_svg: ^1.1.6
-  google_fonts: ^4.0.3
+  cupertino_icons:
+  fluttertoast:
+  video_player:
+  chewie:
+  flutter_svg:
+  google_fonts:
 
 dev_dependencies:
   flutter_test:
