feat:修改为git拉取flutter源码为stable分支

--- a/.github/workflows/depoly_gh_pages.yml
+++ b/.github/workflows/depoly_gh_pages.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Setup Flutter
         run: |
-          git clone https://github.com/flutter/flutter.git --depth 1 -b beta ~/flutter
+          git clone https://github.com/flutter/flutter.git --depth 1 -b stable ~/flutter
           echo "~/flutter/bin" >> ${GITHUB_PATH}
 
       - name: Cache dependencies
