--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.6.0
+  sdk: ^3.6.1
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,9 +35,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   fluttertoast: ^8.2.10
   video_player: ^2.9.2
-  chewie: ^1.9.0
+  chewie: ^1.9.2
   flutter_svg: ^2.0.17
   google_fonts: ^6.2.1
+  package_info_plus: ^8.1.3
 
 dev_dependencies:
   flutter_test:
